--- a/latex/final_paper/TAN_2018.tex
+++ b/latex/final_paper/TAN_2018.tex
@@ -113,8 +113,7 @@ Now consider a generalised domain-adaptive semi-supervised learning scenario whe
 
 This generalised domain-adaptive semi-supervised learning scenario is distinct from the style-transfer learning problem. In style transfer, learning occurs only on a single marginalised input vector across domains, and does not involve a corresponding label vector, thus significantly simplifying the learning procedure [CITE].
 
-We now motivate the usefulness of an algorithm that can learn a conditional probability distribution within the above generalised domain-adaptive semi-supervised scenario with a real-world application. drug discovery example here
-
+We now further motivate the usefulness of an algorithm that can learn a conditional probability distribution within the generalised domain-adaptive semi-supervised learning scenario with a real-world application. Consider the problem of human drug discovery. In a human drug discovery scenario, there is no data available about how an experimental drug molecule might bind to known human protein structures due to the difficulty in testing new drugs on live human subjects. However, there is ample data available on how an experimental drug molecule can bind to known yeast cell protein structures due to the free ability to test new drugs on these cells. In this scenario, the yeast cell experiments represent the source domain and the human experiments represent the target domain. The yeast cell protein structure is the input vector of the source domain and the experimental drug for yeast cells is the label vector of the source domain. Likewise, the human protein structure is the input vector of the target domain and the experimental drug for humans is the unknown label vector of the target domain. The learning goal is to generate a shortlist of potential candidate drugs for further human testing. Such an algorithm would be highly valuable in discovering new drugs for humans with fewer drug trials.
 
 
 %However, if the labelled and unlabelled sets of data are not mutually exclusive in their conditional probability distributions between their inputs and labels (with the unlabelled domain leveraging a prior distribution on its labels), then it is possible to transductively learn an optimal conditional probability distribution between the inputs and labels across the labelled and unlabelled sets of data. This means that with a suitable prior, a transductive combination of labelled and unlabelled data can be approximated for arbitrary combinations of domain-specific conditional probability distributions. This scenario is what motivated the creation of the TAN framework. 
