--- a/latex/final_paper/TAN_2018.tex
+++ b/latex/final_paper/TAN_2018.tex
@@ -51,13 +51,11 @@
 
 \begin{icmlauthorlist}
 \icmlauthor{Sean Rowan}{ucl}
-\icmlauthor{Lewis Moffat}{ucl}
 \end{icmlauthorlist}
 
 \icmlaffiliation{ucl}{University College London}
 
-\icmlcorrespondingauthor{Sean Rowan}{sean.rowan.16@ucl.ac.uk}
-\icmlcorrespondingauthor{Lewis Moffat}{L.Moffat@cs.ucl.ac.uk}
+\icmlcorrespondingauthor{}{sean.rowan.16@ucl.ac.uk}
 
 % You may provide any keywords that you
 % find helpful for describing your paper; these are used to populate
