--- a/latex/final_paper/TAN_2018.tex
+++ b/latex/final_paper/TAN_2018.tex
@@ -128,7 +128,7 @@ There are two prior works that form the basis for the TAN framework: 1) Generati
 
 In the GAN framework, a two-player zero-sum game between adversarial learning agents is played where one agent (the generator) learns to generate convincing fake data, while the other agent (the discriminator) learns to discern generated data from sampled data which comes from an unknown distribution. The generator learns a transfer function that converts an inputted Gaussian-noise vector into convincing data that matches the unknown data distribution on convergence of the adversarial game.
 
-The ALI framework extends the GAN framework by simultaneously learning a reverse transfer function that maps inputted data back to the Gaussian-noise vector which generated it, allowing the ability to finely control the features of the generated data with interpolations in the Gaussian-noise vector. The ALI framework by itself does not allow the ability to learn conditional probability distributions on inputted conditional data pairs [CITE]. \textbf{N.B. cite the BiGAN model here too. }
+The ALI framework (and also the BiGAN framework) extends the GAN framework by simultaneously learning a reverse transfer function that maps inputted data back to the Gaussian-noise vector which generated it, allowing the ability to finely control the features of the generated data with interpolations in the Gaussian-noise vector. The ALI framework by itself does not allow the ability to learn conditional probability distributions on inputted conditional data pairs [CITE]. \textbf{N.B. cite the BiGAN model here too. }
 
 The GAN framework can directly learn conditional probability distributions, and has also previously been formulated for the standard domain-adaptation learning scenario [CITE]. However, the GAN framework and its variants are not suited to the generalised domain-adaptation learning scenario because the discriminator requires label-vectors\footnote{`Label-vector' here means the actual data that the discriminator discerns as being real or fake, and not the real/fake label for the data inputted to the discriminator. Also, the input-vector for the domain-adaptation problem is inputted to the generator along with the Gaussian noise vector.} that come from the same marginalised probability distribution across the real and fake (i.e. source and target in this case) domains. TAN allows the label-vectors to come from different marginalised probability distributions across the real and fake domains.
 
@@ -139,7 +139,10 @@ In this section, we first outline the TAN probabilistic model, then we define th
 
 TAN leverages both a GAN network and an ALI network, but with a shared generator across the two networks. The GAN network is trained normally and exclusively on the source-domain data. The ALI network is also trained normally but exclusively on the target-domain unlabelled input data and a prior on the target-domain label data. A unique training procedure which combines the two networks via the generator forces the shared generator and the ALI network's encoder to accommodate the statistics of both the source and target domain, and leads to convergence at a unique global optimum under mild assumptions (the exact same convexity assumptions from the original GAN framework formulation [CITE]). The trained encoder can then be used as an inference model on the target-domain unlabelled input-data.
 \subsection{Model}
-We first define our terms as follows. $\bm{x}$ is the input-vector and $\bm{z}$ is the label-vector. $p_s(\bm{x},\bm{z})$ is the joint data distribution from the source domain. $p_s(\bm{z})$ is the marginalised label-vector data distribution from the source domain. $p_t(\bm{x})$ is the unlabelled input-vector data distribution from the target domain. $\widetilde{p}_t(\bm{z})$ is the label-vector prior distribution from the target domain. $G_x(\bm{x}|\bm{z}; \theta_{gx})$ is the shared generator function. $G_z(\bm{z}|\bm{x}; \theta_{gz})$ is the encoder function. $y$ is the binary classification label of the inputted data to a discriminator. $y=1$ is a real sample and $y=0$ is a generated sample for the GAN network. $y=1$ is a sample involving the encoder and $y=0$ is a sample involving the generator for the ALI network. $D_s(y|\bm{x},\bm{z}; \theta_{ds})$ is the source-domain discriminator function. $D_t(y|\bm{x},\bm{z}; \theta_{dt})$ is the target-domain discriminator function.
+We first define our terms as follows. $\bm{x}$ is the input-vector and $\bm{z}$ is the label-vector. $p_s(\bm{x},\bm{z})$ is the joint data distribution from the source domain. $p_s(\bm{z})$ is the marginalised label-vector data distribution from the source domain. $p_t(\bm{x})$ is the unlabelled input-vector data distribution from the target domain. $\widetilde{p}_t(\bm{z})$ is the label-vector prior distribution from the target domain. $G_x(\bm{x}|\bm{z}; \theta_{gx})$ is the shared generator function. $G_z(\bm{z}|\bm{x}; \theta_{gz})$ is the encoder function. $y$ is the binary classification label of the inputted data to a discriminator. $y=1$ for samples from the distribution that the discriminator 
+
+
+$y=1$ is a real sample and $y=0$ is a generated sample for the GAN network. $y=1$ is a sample involving the encoder and $y=0$ is a sample involving the generator for the ALI network. $D_s(y|\bm{x},\bm{z}; \theta_{ds})$ is the source-domain discriminator function. $D_t(y|\bm{x},\bm{z}; \theta_{dt})$ is the target-domain discriminator function.
 
 \begin{equation}
 \begin{split}
@@ -163,39 +166,60 @@ We first define our terms as follows. $\bm{x}$ is the input-vector and $\bm{z}$ 
 \begin{algorithmic}
    \STATE $\theta_{gx}$, $\theta_{gz}$, $\theta_{ds}$, $\theta_{dt}$ $\leftarrow$ initialise network parameters
    \REPEAT
-   	\STATE \textbf{Source domain training:}
+	\FOR{$m$ steps} 
 	\FOR{$k$ steps}
    		\STATE $(\bm{x},\bm{z})^{(1)}, \dots, (\bm{x},\bm{z})^{(M)} \sim p_s(\bm{x},\bm{z})$ 
 		\STATE $\bm{z}^{(1)}, \dots, \bm{z}^{(M)} \sim p_s(\bm{z})$
 		\STATE $\hat{\bm{x}}^{(j)} \sim G_x \left(\bm{z}^{(j)}\right), \ \ \ \ \ \ j = 1, \dots, M $ 
 		\STATE $\rho_r^{(i)} \leftarrow D_s\left((\bm{x},\bm{z})^{(i)}\right), \ \ \ \ \ \ i = 1, \dots, M $ 
 		\STATE $\rho_g^{(j)} \leftarrow D_s\left(\hat{\bm{x}}^{(j)}, \bm{z}^{(j)}\right), \ \ \ \ \ \ j = 1, \dots, M $
-		\STATE $\mathcal{L}_d \leftarrow \frac{1}{M} \left( \sum_{i=1}^{M} \log \left( \rho_r^{(i)} \right) + \sum_{j=1}^{M} \log \left( 1 - \rho_g^{(j)} \right) \right)$
-		\STATE $\theta_{ds} \leftarrow \theta_{ds} + \nabla_{\theta_{ds}}\mathcal{L}_d$
+		\STATE $\mathcal{L}_d \leftarrow -\frac{1}{M} \left( \sum_{i=1}^{M} \log \left( \rho_r^{(i)} \right) + \sum_{j=1}^{M} \log \left( 1 - \rho_g^{(j)} \right) \right)$
+		\STATE $\theta_{ds} \leftarrow \theta_{ds} - \nabla_{\theta_{ds}}\mathcal{L}_d$
 	\ENDFOR
 	\STATE $\bm{z}^{(1)}, \dots, \bm{z}^{(M)} \sim p_s(\bm{z})$
 	\STATE $\hat{\bm{x}}^{(j)} \sim G_x \left(\bm{z}^{(j)}\right), \ \ \ \ \ \ j = 1, \dots, M $ 
 	\STATE $\rho_g^{(j)} \leftarrow D_s\left(\hat{\bm{x}}^{(j)}, \bm{z}^{(j)}\right), \ \ \ \ \ \ j = 1, \dots, M $
-	\STATE $\mathcal{L}_g \leftarrow -\frac{1}{M} \sum_{j=1}^{M} \log \left(1 - \rho_g^{(j)} \right)$
-	\STATE $\theta_{gx} \leftarrow \theta_{gx} + \nabla_{\theta_{gx}}\mathcal{L}_g$
-	
-   	\STATE \textbf{Target domain training:}
+	\STATE $\mathcal{L}_g \leftarrow \frac{1}{M} \sum_{j=1}^{M} \log \left(1 - \rho_g^{(j)} \right)$
+	\STATE $\theta_{gx} \leftarrow \theta_{gx} - \nabla_{\theta_{gx}}\mathcal{L}_g$
+	\ENDFOR
+	\FOR{$n$ steps}
    	\STATE $\bm{x}^{(1)}, \dots, \bm{x}^{(M)} \sim p_t(\bm{x})$ 
 	\STATE $\bm{z}^{(1)}, \dots, \bm{z}^{(M)} \sim \widetilde{p}_t(\bm{z})$
 	\STATE $\hat{\bm{z}}^{(i)} \sim G_z \left( \bm{x}^{(i)}\right), \ \ \ \ \ \ i = 1, \dots, M $ 
 	\STATE $\hat{\bm{x}}^{(j)} \sim G_x \left( \bm{z}^{(j)}\right), \ \ \ \ \ \ j = 1, \dots, M $
 	\STATE $\rho_e^{(i)} \leftarrow D_t(\bm{x}^{(i)}, \hat{\bm{z}}^{(i)}), \ \ \ \ \ \ i = 1, \dots, M $ 
 	\STATE $\rho_g^{(j)} \leftarrow D_t(\hat{\bm{x}}^{(j)}, \bm{z}^{(j)}), \ \ \ \ \ \ j = 1, \dots, M $
-	\STATE $\mathcal{L}_d \leftarrow \frac{1}{M} \left( \sum_{i=1}^{M} \log \left( \rho_e^{(i)} \right) + \sum_{j=1}^{M} \log \left( 1 - \rho_g^{(j)} \right) \right)$
-	\STATE $\mathcal{L}_g \leftarrow \frac{1}{M} \left( \sum_{i=1}^{M} \log \left( 1 - \rho_e^{(i)} \right) + \sum_{j=1}^{M} \log \left(\rho_g^{(j)} \right) \right)$
-	\STATE $\theta_{dt} \leftarrow \theta_{dt} + \nabla_{\theta_{dt}}\mathcal{L}_d$
-	\STATE $\theta_{gx} \leftarrow \theta_{gx} + \nabla_{\theta_{gx}}\mathcal{L}_g$
-	\STATE $\theta_{gz} \leftarrow \theta_{gz} + \nabla_{\theta_{gz}}\mathcal{L}_g$
+	\STATE $\mathcal{L}_d \leftarrow -\frac{1}{M} \left( \sum_{i=1}^{M} \log \left( \rho_e^{(i)} \right) + \sum_{j=1}^{M} \log \left( 1 - \rho_g^{(j)} \right) \right)$
+	\STATE $\mathcal{L}_g \leftarrow -\frac{1}{M} \left( \sum_{i=1}^{M} \log \left( 1 - \rho_e^{(i)} \right) + \sum_{j=1}^{M} \log \left(\rho_g^{(j)} \right) \right)$
+	\STATE $\theta_{dt} \leftarrow \theta_{dt} - \nabla_{\theta_{dt}}\mathcal{L}_d$
+	\STATE $\theta_{gx} \leftarrow \theta_{gx} - \nabla_{\theta_{gx}}\mathcal{L}_g$
+	\STATE $\theta_{gz} \leftarrow \theta_{gz} - \nabla_{\theta_{gz}}\mathcal{L}_g$
+	\ENDFOR
    \UNTIL{convergence}
 \end{algorithmic}
 \end{algorithm}
 
 \subsection{Global Optimality Proof}
+
+\begin{equation}
+p_s(\bm{x},\bm{z}) = G_x(\bm{x}|\bm{z};\theta_{gx}^*)p_s(\bm{z}).
+\end{equation}
+
+\begin{equation}
+G_x(\bm{x}|\bm{z};\theta_{gx}^*)\widetilde{p}_t(\bm{z}) = G_z(\bm{z}|\bm{x}; \theta_{gz}^*)p_t(\bm{x}).
+\end{equation}
+Therefore,
+\begin{equation}
+\begin{split}
+G_x(\bm{x}|\bm{z};\theta_{gx}^*) &= \frac{G_z(\bm{z}|\bm{x}; \theta_{gz}^*)p_t(\bm{x})}{\widetilde{p}_t(\bm{z})}\\
+&= \frac{p_s(\bm{x},\bm{z})}{p_s(\bm{z})}.
+\end{split}
+\end{equation}
+Finally,
+\begin{equation}
+G_z(\bm{z}|\bm{x}; \theta_{gz}^*) = \frac{p_s(\bm{x},\bm{z})\widetilde{p}_t(\bm{z})}{p_s(\bm{z})p_t(\bm{x})}.
+\end{equation}
+
 \subsection{Convergence Proof}
 
 \section{Experiments}
