--- a/latex/icml2018.sty
+++ b/latex/icml2018.sty
@@ -116,7 +116,7 @@
   \fi
 \fi\fi
 
-\newcommand{\ICML@arxiv}{Code and hyperparameters are available at:\\
+\newcommand{\ICML@arxiv}{Code is available at:\\
 \url{https://github.com/sean-rowan/tan}}
 
 %%%%%%%%%%%%%%%%%%%%
